--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -15,7 +15,9 @@
     padding: 5px;
 }
 
-.auth-actions {
+.auth-actions a {
     outline: none;
     text-decoration: none;
+    color: white;
+    
 }
